AMD/perf-2023-11-20-09-39/resnet50v1_fp16.err
In file included from /tmp/comgr-364c06/input/main.cpp:3:
/tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:47:50: error: non-constant-expression cannot be narrowed from type 'type' (aka 'float') to 'otype' (aka '_Float16') in initializer list [-Wc++11-narrowing]
        r.inner([&](auto& y, auto x) { y = otype{x / batch_sum}; })(output, exp_in);
                                                 ^~~~~~~~~~~~~
/tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:287:42: note: in instantiation of function template specialization 'migraphx::softmax(migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>, migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>)::(anonymous class)::operator()(migraphx::array<unsigned int, 2>, migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>)::(anonymous class)::operator()<_Float16, _Float16>' requested here
            using result_type = decltype(f(decl_inner_storage(xs)...));
                                         ^
/tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:277:43: note: in instantiation of function template specialization 'migraphx::reduce::reducer_base<migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>>::inner((lambda at /tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:47:17))::(anonymous class)::operator()<migraphx::integral_constant<unsigned int, 1001>, migraphx::reduce::storage_access<_Float16, (lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:248:17)>, migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>::inner_storage<_Float16, 4, migraphx::integral_constant<unsigned int, 1001>>>' requested here
        return [=](auto&&... xs) { return f(get_size(xs...), make_inner_slice(xs)...); };
                                          ^
/tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:47:9: note: in instantiation of function template specialization 'migraphx::reduce::reducer_base<migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>>::inner_sliced((lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:286:35))::(anonymous class)::operator()<migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>> &, migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>::inner_storage<_Float16, 4, migraphx::integral_constant<unsigned int, 1001>> &>' requested here
        r.inner([&](auto& y, auto x) { y = otype{x / batch_sum}; })(output, exp_in);
        ^
/tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:13: note: in instantiation of function template specialization 'migraphx::softmax(migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>, migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>)::(anonymous class)::operator()<migraphx::array<unsigned int, 2>, migraphx::reduce::block::reducer<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:413:34)>>' requested here
            f(out_idx, make(idx, [&](auto input) { return reduce_slice<Output>(input, out_idx); }));
            ^
/tmp/comgr-364c06/include/migraphx/kernels/index.hpp:162:64: note: in instantiation of function template specialization 'migraphx::reduce::block::run((lambda at /tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:37:57))::(anonymous class)::operator()<unsigned int>' requested here
    static constexpr auto invoke_loop(F f, I i, D) -> decltype(f(i))
                                                               ^
/tmp/comgr-364c06/include/migraphx/kernels/index.hpp:206:21: note: while substituting deduced template arguments into function template 'invoke_loop' [with F = (lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:411:53), I = index_int, D = integral_constant<decltype(0), 0>]
                    invoke_loop(f, start, _c<0>);
                    ^
/tmp/comgr-364c06/include/migraphx/kernels/index.hpp:230:9: note: in instantiation of function template specialization 'migraphx::index::for_stride<false, (lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:411:53), migraphx::integral_constant<unsigned int, 256>, migraphx::integral_constant<unsigned int, 256>>' requested here
        for_stride<false>(global, n, nglobal(), f);
        ^
/tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:411:13: note: in instantiation of function template specialization 'migraphx::index::global_stride<(lambda at /tmp/comgr-364c06/include/migraphx/kernels/reduce.hpp:411:53), migraphx::integral_constant<unsigned int, 256>>' requested here
        idx.global_stride(nelements * idx.nlocal(), [&](auto i) {
            ^
/tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:37:21: note: in instantiation of function template specialization 'migraphx::reduce::block::run<migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1>, migraphx::integral_const_array<unsigned int, 1001, 1>>, (lambda at /tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:37:57)>' requested here
    block::template run<reduce::with_axis<Input, Axis>>([&](auto, auto r) {
                    ^
/tmp/comgr-364c06/input/main.cpp:13:9: note: in instantiation of function template specialization 'migraphx::softmax<1U, migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>, migraphx::tensor_view<_Float16, migraphx::shape<migraphx::integral_const_array<unsigned int, 1, 1001>, migraphx::integral_const_array<unsigned int, 1001, 1>>>>' requested here
        softmax<1>(input, output);
        ^
/tmp/comgr-364c06/include/migraphx/kernels/softmax.hpp:47:50: note: insert an explicit cast to silence this issue
        r.inner([&](auto& y, auto x) { y = otype{x / batch_sum}; })(output, exp_in);
                                                 ^~~~~~~~~~~~~
                                                 static_cast<otype>( )
1 error generated when compiling for gfx908.

terminate called after throwing an instance of 'migraphx::version_2_9_0::exception'
  what():  /src/AMDMIGraphX/src/targets/gpu/compile_hip.cpp:171: compile: hiprtc: HIPRTC_ERROR_COMPILATION: Compilation failed.
Aborted (core dumped)
terminate called after throwing an instance of 'migraphx::version_2_9_0::exception'
  what():  /src/AMDMIGraphX/src/targets/gpu/compile_ops.cpp:177: benchmark: No configs to tune
timeout: the monitored command dumped core
